--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.12"
-tokio = "1.26.0"
+tokio =  { version = "1.26.0", features = ["full"] }
 anyhow = "1.0.70"
