--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 axum = "0.6.12"
 tokio =  { version = "1.26.0", features = ["full"] }
 anyhow = "1.0.70"
+serde = { version = "1.0.158", features = ["derive"] }
+serde_json = "1.0.94"
